Fix UI issues with enforced dark mode (#12055)
* Fix account review dark mode styles

* Fix forced dark mode

--- a/clients/apps/web/src/styles/globals.css
+++ b/clients/apps/web/src/styles/globals.css
@@ -216,12 +216,23 @@
 
 @layer base {
   html {
+    color-scheme: light dark;
     @apply text-gray-900;
     font-feature-settings: 'cv01', 'cv03', 'cv04', 'cv06', 'cv11', 'ss03';
   }
 
   html.dark {
     @apply text-gray-200;
+  }
+
+  html:not(.dark) {
+    --lightningcss-light: initial;
+    --lightningcss-dark: ;
+  }
+
+  html.dark {
+    --lightningcss-light: ;
+    --lightningcss-dark: initial;
   }
 
   input[type='email'] {
